# survey-linter

./: .nojekyll  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
assets/: report_template.md
examples/: example_audit.md  sample_survey.md  sample_survey.txt  sample_survey_zh.txt  surveylinterrc.example.json
references/: rule_catalog.md
scripts/: lint_survey.py
surveylinter/: __init__.py  __main__.py  _util.py  cli.py  config.py  engine.py  fix.py  model.py  parse.py  report.py  rules.py  scales.py  score.py  structure.py
surveylinter/importers/: __init__.py  google_forms.py  qualtrics.py  typeform.py
surveylinter/lexicons/: __init__.py  en.py  zh.py
tests/: test_cli.py  test_core.py  test_importers.py
web/: index.html
